# dbt-template-me

./: .gitignore  .sqlfluff  .sqlfluffignore  Pipfile  README.md  bigquery_profiles.yml  dbt_project.yml  packages.yml  profile_template.yml  pyproject.toml  snowflake_profiles.yml
analyses/: generate_base_model.sql  generate_source.sql
models/bronze/: src_orders.sql
models/gold/: gold_orders.sql
models/silver/: silver_orders.sql
