[project]
name = "dbt-template-me"
version = "0.1.0"
description = ""
authors = [
    {name = "DvGils",email = "demian_vg@hotmail.nl"}
]
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "dbt-snowflake (>=1.9.1,<2.0.0)",
    "elementary-data (>=0.16.2,<0.17.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
shandy-sqlfmt = "^0.26.0"
sqlfluff-templater-dbt = "^3.3.1"

